--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -14,8 +14,8 @@
   "MailSettings": {
     "Server": "smtp.gmail.com",
     "Port": 465,
-    "SenderName": "chrsut01",
-    "SenderEmail": "chrsut01@easv365.dk",
+    "SenderName": "Kaffekunstens Forening",
+    "SenderEmail": "kaffekunstensforening@gmail.com",
     "UserName": "noreplyMindfactory@gmail.com",
     "Password": "uclynhanraxuzump"
   }
