--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -16,7 +16,7 @@
     "Port": 465,
     "SenderName": "Kaffekunstens Forening",
     "SenderEmail": "kaffekunstensforening@gmail.com",
-    "UserName": "noreplyMindfactory@gmail.com",
-    "Password": "uclynhanraxuzump"
+    "UserName": "Kaffekunstensforening@gmail.com",
+    "Password": "xmjn lmkg znsz npvq"
   }
 }
